feat(authors): first commit
- First commit ready for testing.

feat #1879
